#4021 fixed another error in the manual

--- a/doc/src/main/sources/BW4T3Instructions/BW4T3_instructions.tex
+++ b/doc/src/main/sources/BW4T3Instructions/BW4T3_instructions.tex
@@ -152,7 +152,7 @@ The following environment init parameters are available to the clients (the defa
     
 \item
     LAUNCHGUI("true"):
-    whether to launch a separate GUI for bot controlled by agents. This GUI shows the environment from the perspective of the bot. When this option is used, the human GUI is connected with the agent platform. 
+    whether to launch a GUI for 'bot' type entities. This GUI shows the environment from the perspective of the bot. 
         
 \item
     HUMANCOUNT("1"):
