--- a/doc/src/main/sources/BW4T3Instructions/HumanPlayerGUI/humanplayergui.tex
+++ b/doc/src/main/sources/BW4T3Instructions/HumanPlayerGUI/humanplayergui.tex
@@ -3,10 +3,11 @@
 
 When the GUI is open (Figure \ref{fig:humanPlayerGUI}), two main parts can be seen:
 \begin{enumerate}
-\item The map panel, where the map and the block sequence are being displayed.
-\item The message panel, where the remaining bot battery and messages between bots and e-partner are being displayed. Messages can be be sent to other bots and your e-partner.
+\item left: the map area, where the map and the block sequence are being displayed.
+\item right: the message area, where messages between bots and e-partner are being displayed.
 \end{enumerate}
 
+The name of the bot that is controlled is shown in the title bar of the GUI.
 
 \begin{figure}[h]
 \begin{center}
@@ -17,16 +18,18 @@ When the GUI is open (Figure \ref{fig:humanPlayerGUI}), two main parts can be se
 \end{figure}
 
 \subsection{General use}
-Figure \ref{fig:humanPlayerGUI} shows the human player GUI, with the map panel in the left half, and the message panel in the right half. To use the human player interface, the user clicks with the left (occasionally the right) mouse button in the GUI. Depending on where the user clicks, different menus appear. The user then picks the appropriate action from the menu to execute that action. In the following sections the possibilities are explained.
+To use the human player interface, the user clicks with the left (occasionally the right) mouse button in the GUI. Depending on where the user clicks, different menus appear. The user then picks the appropriate action from the menu to execute that action. In the following sections the possibilities are explained.
 
-With the map panel, the bot can be directed by clicking on the map. Different pop-up menus will appear upon clicking on different entities on the map.
+In the map area, the bot can be directed by clicking on the map. Different pop-up menus will appear upon clicking on different entities on the map.
 
-With the message panel, the battery capacity of the bot that can be controlled can be found. Bots can be selected to which messages need to be sent and messages can be sent here. The bot chat session and the e-partner chat session are also displayed.
+In the message area, the remaining battery charge of the bot  is shown in the top left. The combo box in the top center allows the user to select other bots, to which which messages can be sent. The top right 'Choose message' button allows the user to select a message to send.
+
+The text area in the center shows the previous messages that were communicated.
 
 The map panel shares the message target with the message panel. So all messages that are sent from the map panel are sent using the actual message target setting in the message panel. A message will be send to all bots by default. Please refer to the Message Panel section below to adjust the receiver(s) of messages.
 
 \subsection{Map Panel}
-A picture of the Map Panel is shown in \ref{fig:mapPanel}.
+A picture of the Map Panel is shown in Figure \ref{fig:mapPanel}.
 
 \begin{figure}[h]
 \begin{center}
@@ -41,7 +44,7 @@ Here the following actions can be done:
 \begin{itemize}
 
 \item \textbf{Go to: $"place"$}:
-To command the controlled bot to go to a room or a certain place in the corridors, click on the room or place where the bot needs to go to. The corridor menu (figure ~\ref{fig:corridorMenu}) will appear next to your mouse pointer with the option $go$ $to$ $here$ or $Go$ $to$ $"room"$.\\
+To command the bot to go to a room or a certain place in the corridors, click on the room or place where the bot needs to go to. The corridor menu (figure ~\ref{fig:corridorMenu}) will appear next to your mouse pointer with the option $go$ $to$ $here$ or $Go$ $to$ $"room"$.\\
 
 \begin{figure}[h]
 \centering
