#4055 added BW4THuman example to docu

--- a/doc/src/main/sources/BW4T3Instructions/BW4T3_instructions.tex
+++ b/doc/src/main/sources/BW4T3Instructions/BW4T3_instructions.tex
@@ -61,7 +61,7 @@ You need to install a number of items to run BW4T from GOAL.
 \begin{enumerate}
  \item (if not yet done): Install Java 7 or higher (download from \url{http://www.java.com}) and made it the default Java (such that double clicking on a jar makes it open with Java 7 or higher).
  \item You can download GOAL from \url{http://ii.tudelft.nl/trac/goal}. Here we assume you choose the GOAL plugin for Eclipse.
- \item GOAL provides a sample Multi-agent-system 'BW4T3' that is demonstrating the Blocks World for Teams system. \footnote{If you run in a different agent system, you can download the client-side environment from \url{https://github.com/eishub/BW4T/releases}. Select $bw4t-client-X.Y.Z.jar$. This is the environment that should be attached to your agent system. You then will have to write your own agents that can run in the BW4T world.}
+ \item GOAL provides example Multi-agent-systems 'BW4T3'  and 'BW4T3-Human' demonstrating the Blocks World for Teams system. \footnote{If you run in a different agent system, you can download the client-side environment from \url{https://github.com/eishub/BW4T/releases}. Select $bw4t-client-X.Y.Z.jar$. This is the environment that should be attached to your agent system. You then will have to write your own agents that can run in the BW4T world.}
  \item You should download the BW4T server from \url{https://github.com/eishub/BW4T/releases} and save it in $<$SERVER$>$. Select the latest $bw4t-server-X.Y.Z.jar$.
  \item You can optionally download the BW4T map editor from \url{https://github.com/eishub/BW4T/releases} and save it in $<$SERVER$>$. Select the latest $bw4t-environment-store-X.Y.Z.jar$.
  \item You can optionally download the BW4T scenario editor from \url{https://github.com/eishub/BW4T/releases} and save it in $<$SERVER$>$. Select the latest $bw4t-scenario-editor-X.Y.Z.jar$.
